<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/title"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        android:layout_margin="10dp"
        android:textColor="#000000"/>
    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/me"
        android:layout_below="@+id/title_text_view"
        android:layout_marginLeft="15dp"/>
    <TextView
        android:id="@+id/name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/nameField"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/image_view"
        android:layout_below="@+id/title_text_view"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:layout_margin="8dp"
        android:text="@string/name"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_below="@+id/name_field"
        android:layout_toRightOf="@+id/image_view"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/age_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/ageField"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/image_view"
        android:layout_below="@+id/name_text_view"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/age_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:layout_margin="8dp"
        android:text="@string/age"
        android:textSize="25dp"
        android:textColor="#000000"
        android:layout_below="@+id/age_field"
        android:layout_toRightOf="@+id/image_view"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/college_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/college_field"
        android:fontFamily="sans-serif-light"
        android:textSize="20sp"
        android:layout_below="@+id/image_view"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/college_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/college"
        android:textColor="#000000"
        android:textSize="25sp"
        android:fontFamily="sans-serif-light"
        android:layout_toRightOf="@+id/college_field"
        android:layout_below="@+id/image_view"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="7dp"
        android:layout_marginBottom="14dp"/>
    <TextView
        android:id="@+id/skills_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skillsField"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/college_field"
        android:layout_marginLeft="20dp"/>
    <TextView
        android:id="@+id/skills_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills"
        android:textSize="25sp"
        android:fontFamily="sans-serif-light"
        android:textColor="#000000"
        android:layout_toRightOf="@id/skills_field"
        android:layout_below="@id/college_text_view"
        android:layout_marginLeft="5dp"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>